<resources>
    <string name="app_name">Agent Portal</string>

    <string name="API_KEY">AIzaSyAUeHUTBzvUzgbGjICNOGX7ulSz8o92lAo</string>
    <string name="action_logout">Logout</string>
    <string name="txt_welcome">Welcome to Agency APP</string>
    <string name="edt_username">EMAIL ADDRESS</string>
    <string name="edt_password">PASSWORD</string>
    <string name="bt_Submit">Login</string>
    <string name="tv_transaction">Syptoms</string>
    <string name="finish">Finished</string>

    <string name="imagepicker_multiselect_done">Done</string>
    <string name="imagepicker_multiselect_not_enough_singular">You have to select 1 more image</string>
    <string name="imagepicker_multiselect_not_enough_plural">You have to select %d more images</string>
    <string name="imagepicker_multiselect_enough_singular">You have selected 1 image</string>
    <string name="imagepicker_multiselect_enough_plural">You have selected %d images</string>
    <string name="imagepicker_multiselect_overselect">You cannot select more than %d images</string>
    <string name="imagepicker_gallery_intent_title">Select Multiple Images</string>
    <string name="imagepicker_no_image_text_view">There are no image in your device.</string>
    <string name="login_email">demo@gmail.com</string>
    <string name="userpass">123456789</string>
    <string name="title_activity_amenity_dynamic">AmenityDynamicActivity</string>
    <string name="select_additional_images">Select Additional Images</string>
    <string name="amenity_details">AMENITY DETAILS</string>
    <string name="mark_as_hot">Mark As Hot</string>
    <string name="mark_as_feature">Mark As Feature</string>
    <string name="mark_as_pop">Mark As PopOut</string>
    <string name="mark_as_promo">Mark As Promo</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_address">Enter Address</string>
    <string name="front_image">Front Image</string>
    <string name="enter_price">Enter Price</string>
    <string name="property_title">Property Title</string>
    <string name="property_information">Property Information</string>
    <string name="submit">Submit Property</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_place_selected">No Place selected</string>
    <string name="manage_properties">Property</string>
    <string name="todo_list">Todo List</string>
    <string name="delete">DELETE</string>
    <string name="delete_property">delete property</string>
    <string name="leads">Leads</string>
    <string name="revenue">Revenue</string>
    <string name="expense">Expense</string>
    <string name="setting">Setting</string>
    <string name="profile_setting">profile setting</string>
    <string name="area">Area&#42;</string>
    <string name="action_search">search</string>
    <string name="college">College</string>
    <string name="add_property">Add Property Location&#42;</string>
    <string name="purpose">Purpose&#42;</string>
    <string name="property1_title">Property Title&#42;</string>
    <string name="city">City&#42;</string>
    <string name="property_type">Property Type&#42;</string>
    <string name="add_abv">Add Property Above</string>
    <string name="view">View</string>
    <string name="electricity_backup">Electricity Backup</string>
    <string name="central_ac">Central AC</string>
    <string name="furnished">Furnished&#42;</string>
    <string name="maid_room">Maid Room</string>
    <string name="study_room">Study Room</string>
    <string name="bed_room">No. Of Bed Room</string>
    <string name="parking">Parking</string>
    <string name="school">School</string>
    <string name="park">Park</string>
    <string name="masjid">Masjid</string>
    <string name="servant_quarters">No. Of Servant Qtz</string>
    <string name="kitchen">Kitchen</string>
    <string name="store_room">No. Of Store Room</string>
    <string name="bath_room">No. Of Bath Room</string>
    <string name="laundry">Laundry</string>
    <string name="prayer_room">Prayer Room</string>
    <string name="dining_room">Dining Room</string>
    <string name="drawing_room">Drawing Room</string>
    <string name="business_and_communication">Business and Communication</string>
    <string name="intercom">Intercom</string>
    <string name="cable_tv_or_satellite">Cable TV Or Satellite</string>
    <string name="broadband_internet">Broadband Internet</string>
    <string name="healthcare_recreational">Healthcare Recreational</string>
    <string name="lawn_garden">Lawn / Garden</string>
    <string name="swimming_pool">Swimming Pool</string>
    <string name="jacuzzi">Jacuzzi</string>
    <string name="sauna">Sauna</string>
    <string name="main_features">Main Features</string>
    <string name="near_by">Near By</string>
    <string name="rooms">Rooms</string>
    <string name="lounge">Lounge</string>
    <string name="owner_occupied">Owner Occupied&#42;</string>
    <string name="storage">Storage</string>
    <string name="age_of_property">Age of Property</string>
    <string name="university">University</string>
    <string name="save">Save</string>
    <string name="swipe_left_to_edit">Swipe Left To Edit</string>
    <string name="currency">Currency&#42;</string>
    <string name="price">Price&#42;</string>
    <string name="unit">Unit&#42;</string>
    <string name="privacy">Privacy&#42;</string>
    <string name="address">Address&#42;</string>
    <string name="description">Description</string>
    <string name="proprty_information">PROPERTY INFORMATION</string>
    <string name="active">Active&#42;</string>
    <string name="land_area_42">Land Area*</string>
    <string name="gym">Gym</string>
    <string name="submit_images">Submit Images</string>
    <string name="additional_images">ADDITIONAL IMAGES</string>
    <string name="land_area">Land Area</string>
    <string name="update_submit">Update &#38; Submit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save_changes">You want to quit this activity?</string>


    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="flipping_started">Flipping Started…</string>
    <string name="flipping_stopped">Flipping Stopped…</string>
    <string name="pkr">PKR</string>
    <string name="features_amenities">Features/Amenities</string>
    <string name="title_activity_retrofittesting">retrofittesting</string>

</resources>
